Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ border: 1px solid;
 </div>
 <div class="row-fluid subheading">
 <div class="span12">
-<p class="lead">One sentence description.</p>
+<p class="lead">One sentence description with develop and staging environments.</p>
 </div>
 </div>
 <div class="row-fluid pitch">
