--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script src="https:/d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstarp.js"></script>
 <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
+<link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
 <style type="text/css">
 /* Large desktop */
 @media (min-width: 980px) {
