--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 <title>My first Bitstarter</title>
 <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
 <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstarp-combined.no-icons.min.css">
-
+<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
 <script src="https:///d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
 <script src="https:/d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstarp.js"></script>
 <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
-<link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
 <style type="text/css">
 /* Large desktop */
 @media (min-width: 980px) {
