--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@ div.addthis_toolbox {
 <div class="span8 offset2 social">
 <button class="btn btn-twitter"><i class-"icon-twitter"></i> | Twitter </button>
 <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook </button>
+<a class="coinbase-button" data-code="bd3edfdd43c06455676fb51d52ca92c2" href="https://coinbase.com/checkouts/bd3edfdd43c06455676fb51d52ca92c2">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 <!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_preferred_1"></a>
